2007-09-27  Stefan Jahn  <stefan@lkcc.org>

	* evaluate.cpp: Fixed if-then-else evaluation for mixed
	real/complex arguments as well as for pure complex arguments.

2007-09-25  Stefan Jahn  <stefan@lkcc.org>

	* equation.cpp: Fixed toString() function for evaluated matrices.
	Added printing functionality for immediate vectors and matrices.
	New function returning a double value for all kinds of result
	types.

2007-09-23  Stefan Jahn  <stefan@lkcc.org>

	* scan_netlist.l: Added syntax elements for immediate vectors and
	matrices.

	* parse_netlist.y: Added grammar for immediate vectors and
	matrices.

	* evaluate.cpp: Implemented evaluators for immediate vectors and
	matrices.

	* equation.cpp: Allowing applications with undetermined number of
	arguments.  New function appendNodes() which can be used to
	concatenate argument lists.

2007-09-20  Stefan Jahn  <stefan@lkcc.org>

	* evaluate.cpp: Added random number functions.

2007-09-04  Stefan Jahn  <stefan@lkcc.org>

	* differentiate.cpp: Fixed some memory leaks.

	* equation.cpp: Added new property to an equation node 'skip'
	indicating that the node (e.g. equation assigment) is skipped from
	evaluation when the solver is run.

	* environment.cpp: Added new function which just evaluates (no
	checking and no dataset) the equations in an environment.

2007-09-02  Stefan Jahn  <stefan@lkcc.org>

	* scan_netlist.l: Allowing engineering notation of numbers in
	equations.

2007-08-23  Stefan Jahn  <stefan@lkcc.org>

	* parasweep.cpp: Implemented new initialize() and cleanup()
	callbacks.  This fixes a bug occurring for nested sweeps where the
	sweep variable of an inner-loop sweep is used in an equation.

	* net.cpp: Run new initialize() and cleanup() functionality of
	analyses.

2007-08-15  Stefan Jahn  <stefan@lkcc.org>

	* dataset.cpp: New function to load CSV files added.

	* check_csv.cpp, scan_csv.l, parse_csv.y: Implemented lexer,
	parser and checker for CSV files.
