@@ -19,7 +19,7 @@
  * the Free Software Foundation, Inc., 51 Franklin Street - Fifth Floor,
  * Boston, MA 02110-1301, USA.  
  *
- * $Id: applications.h,v 1.22 2007-09-27 18:13:17 ela Exp $
+ * $Id: applications.h,v 1.23 2007-10-02 06:45:28 ela Exp $
  *
  */
 
@@ -805,14 +805,53 @@ struct application_t eqn::applications[] = {
   { "kbd", TAG_VECTOR, evaluate::kbd_d_d, 2, { TAG_DOUBLE, TAG_DOUBLE } },
   { "kbd", TAG_VECTOR, evaluate::kbd_d,   1, { TAG_DOUBLE } },
 
-  { "?:", TAG_DOUBLE, evaluate::ifthenelse_d_d, 3,
-    { TAG_BOOLEAN, TAG_DOUBLE, TAG_DOUBLE } },
+  { "?:", TAG_BOOLEAN, evaluate::ifthenelse_b_b, 3,
+    { TAG_BOOLEAN, TAG_BOOLEAN, TAG_BOOLEAN } },
+  { "?:", TAG_DOUBLE,  evaluate::ifthenelse_d_d, 3,
+    { TAG_BOOLEAN, TAG_DOUBLE,  TAG_DOUBLE } },
+  { "?:", TAG_DOUBLE,  evaluate::ifthenelse_d_b, 3,
+    { TAG_BOOLEAN, TAG_DOUBLE,  TAG_BOOLEAN } },
+  { "?:", TAG_DOUBLE,  evaluate::ifthenelse_b_d, 3,
+    { TAG_BOOLEAN, TAG_BOOLEAN, TAG_DOUBLE } },
   { "?:", TAG_COMPLEX, evaluate::ifthenelse_c_c, 3,
-    { TAG_BOOLEAN, TAG_DOUBLE, TAG_COMPLEX } },
+    { TAG_BOOLEAN, TAG_DOUBLE,  TAG_COMPLEX } },
+  { "?:", TAG_COMPLEX, evaluate::ifthenelse_c_c, 3,
+    { TAG_BOOLEAN, TAG_BOOLEAN, TAG_COMPLEX } },
   { "?:", TAG_COMPLEX, evaluate::ifthenelse_c_c, 3,
     { TAG_BOOLEAN, TAG_COMPLEX, TAG_DOUBLE } },
   { "?:", TAG_COMPLEX, evaluate::ifthenelse_c_c, 3,
+    { TAG_BOOLEAN, TAG_COMPLEX, TAG_BOOLEAN } },
+  { "?:", TAG_COMPLEX, evaluate::ifthenelse_c_c, 3,
     { TAG_BOOLEAN, TAG_COMPLEX, TAG_COMPLEX } },
+  { "?:", TAG_MATRIX,  evaluate::ifthenelse_m_m, 3,
+    { TAG_BOOLEAN, TAG_MATRIX,  TAG_MATRIX } },
+  { "?:", TAG_MATRIX,  evaluate::ifthenelse_m_m, 3,
+    { TAG_BOOLEAN, TAG_BOOLEAN, TAG_MATRIX } },
+  { "?:", TAG_MATRIX,  evaluate::ifthenelse_m_m, 3,
+    { TAG_BOOLEAN, TAG_DOUBLE,  TAG_MATRIX } },
+  { "?:", TAG_MATRIX,  evaluate::ifthenelse_m_m, 3,
+    { TAG_BOOLEAN, TAG_COMPLEX, TAG_MATRIX } },
+  { "?:", TAG_MATRIX,  evaluate::ifthenelse_m_m, 3,
+    { TAG_BOOLEAN, TAG_MATRIX,  TAG_BOOLEAN } },
+  { "?:", TAG_MATRIX,  evaluate::ifthenelse_m_m, 3,
+    { TAG_BOOLEAN, TAG_MATRIX,  TAG_DOUBLE } },
+  { "?:", TAG_MATRIX,  evaluate::ifthenelse_m_m, 3,
+    { TAG_BOOLEAN, TAG_MATRIX,  TAG_COMPLEX } },
+  { "?:", TAG_VECTOR,  evaluate::ifthenelse_v_v, 3,
+    { TAG_BOOLEAN, TAG_VECTOR,  TAG_VECTOR } },
+  { "?:", TAG_VECTOR,  evaluate::ifthenelse_v_v, 3,
+    { TAG_BOOLEAN, TAG_BOOLEAN, TAG_VECTOR } },
+  { "?:", TAG_VECTOR,  evaluate::ifthenelse_v_v, 3,
+    { TAG_BOOLEAN, TAG_DOUBLE,  TAG_VECTOR } },
+  { "?:", TAG_VECTOR,  evaluate::ifthenelse_v_v, 3,
+    { TAG_BOOLEAN, TAG_COMPLEX, TAG_VECTOR } },
+  { "?:", TAG_VECTOR,  evaluate::ifthenelse_v_v, 3,
+    { TAG_BOOLEAN, TAG_VECTOR,  TAG_BOOLEAN } },
+  { "?:", TAG_VECTOR,  evaluate::ifthenelse_v_v, 3,
+    { TAG_BOOLEAN, TAG_VECTOR,  TAG_DOUBLE } },
+  { "?:", TAG_VECTOR,  evaluate::ifthenelse_v_v, 3,
+    { TAG_BOOLEAN, TAG_VECTOR,  TAG_COMPLEX } },
+
   { "<=", TAG_BOOLEAN, evaluate::lessorequal_d_d, 2,
     { TAG_DOUBLE, TAG_DOUBLE } },
   { ">=", TAG_BOOLEAN, evaluate::greaterorequal_d_d, 2,
