@@ -1,3 +1,8 @@
+2007-10-02  Stefan Jahn  <stefan@lkcc.org>
+
+	* evaluate.cpp: Added the ?: operator for matrices as well as
+	vectors.
+
 2007-09-27  Stefan Jahn  <stefan@lkcc.org>
 
 	* evaluate.cpp: Fixed if-then-else evaluation for mixed
